test/fails/bad_casts/functions4.lgl
tag coord a is vec<2>;
tag coord b is vec<2>;

canon b f(a x) { 
    return [1., 2.];
}

void main() {
    a->b a_b = [[1., 1.], [1., 1.]];
    a avec = [1., 2.];
    b fail = avec in b; // Duplicate anon matrix declares
}